tests/data/bad/bad_schema.py
from __future__ import annotations

from pycs import CN

from ..good.good import cfg

cfg = cfg.clone()
cfg.DICT.Y = CN()
